# pyratiff

./: CHANGELOG.md  README.md  pyproject.toml
docs/: architecture_en.md
src/pyratiff/: __init__.py  reader.py  writer.py
tests/: conftest.py  test_reader.py  test_writer.py
