[project]
name = "pyratiff"
version = "1.0.1"
description = "Read and write pyramidal OME-TIFF files"
readme = "README.md"
license = "Apache-2.0"
authors = [
    { name = "wuwenrui555", email = "wuwenruiwwr@outlook.com" }
]
requires-python = ">=3.12"
dependencies = [
    "tifffile>=2025.5.21",
    "zarr>=3.0",
    "numpy>=1.21",
    "scikit-image>=0.19",
    "pandas>=1.5",
    "tqdm>=4.0",
    "imagecodecs",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pyratiff"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
